fixing the sections to have equal spacing

--- a/Styles.css
+++ b/Styles.css
@@ -158,14 +158,14 @@ p {
     color: inherit;
 }
 
-/* about section sytle code */
+/* about section style code */
 
 .aboutcontainer{
     background-color: white;
     box-shadow: rgba(0, 0, 0, 0.5);
-    border-radius: 15px;
-    margin: 20px;
-    padding: 40px;
+    border-radius: 20px;        
+    margin: 20px;               
+    padding: 40px;              
 }
 
 .more{
@@ -213,8 +213,9 @@ p {
     gap: 30px;
 
     background-color: white;
-    border-radius: 20px;
-    padding: 40px;
+    border-radius: 20px;        
+    margin: 20px;               
+    padding: 40px;              
 }
 
 .servicecontainer{
@@ -259,11 +260,11 @@ p {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    margin: 20px;
+    margin: 20px;               
+    padding: 40px;              
 
     background-color: white;
-    border-radius: 20px;
-    padding: 20px;
+    border-radius: 20px;        
 }
 
 
@@ -305,9 +306,9 @@ p {
     align-items: center;
 
     background-color: white;
-    margin: 20px;
-    padding: 30px; 
-    border-radius: 10px;
+    margin: 20px;               
+    padding: 40px;              
+    border-radius: 20px;        
 
     box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
 }
@@ -443,7 +444,6 @@ p {
 .email:hover {
     box-shadow: 0 0 15px rgba(15,157,58,0.6);
 }
-
 
 
 /* _______________________ */
@@ -900,8 +900,9 @@ p {
 }
 
 .letricproj:hover{
-    transform: scale(1.08);
+    transform: scale(1.02);
     box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+    background-color: var(--primary-light);
 }
 
 .projdescr h3{
